Being refactoring project Split project into multiple sub-modules Got rid of local dependencies